Fixed bug #23071 (when DST in effect, date("T") crashed PHP)